--- a/style.css
+++ b/style.css
@@ -154,7 +154,6 @@ line-height: 70px;
     grid-column-gap: 10px;
     grid-row-gap: 15px; 
 }
-
 .collection{
     border-radius: 15px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
@@ -164,13 +163,9 @@ line-height: 70px;
     padding: 15px;
     border: 1px solid;
 }
-/* me  */
 .collection-banner img {
     width: 100%;
     height: 256px;
-}
-.collection-details{
-
 }
 .collection-title{
     font-size: 28px;
@@ -183,7 +178,7 @@ line-height: 70px;
 .collection-star{
     display: flex;
     align-items: center;
-    /* justify-content: space-between; */
+    
 }
 .rating{
     margin-left: 10px;
@@ -217,3 +212,68 @@ line-height: 70px;
      color: #e71461;
      margin-left: 5px;
  }
+
+
+
+
+
+
+/* extra section */
+
+.newsletter {
+    background-image: url(images/extra1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 10px;
+    box-shadow: 0 0 40px #dbdbdb;
+    padding: 100px 0;
+    text-align: center;
+}
+.newsletter h1 {
+    margin-bottom: 30px;
+}
+.newsletter-box form {
+	display: inline-block;
+}
+ .email-part{
+    border: 1px solid #f1ecec;
+    border-radius: 30px;
+    font-size: 13px;
+    font-weight: 400;
+    display: inline-block;
+    height: 50px;
+    padding: 10px 10px 10px 25px;
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.submit-btn{
+    width: 150px;
+    background: #E02C6D;
+    padding: 10px 24px;
+    border-radius: 40px;
+    color: white;
+ }
+ .submit-btn i{
+     color: white;
+     margin-left: 10px;
+ }
+
+
+
+
+  /* ====== Footer section====== */
+  .foot {
+    padding: 20px;
+    text-align: center;
+    background-color: #111029;
+}
+.foot h2,h4{
+    color: #f5f1f1;
+}
+.foot-icon {
+    color: azure;
+    font-size: 24px;
+    padding-left: 20px;
+}
+
